# define

./: Cargo.toml  LICENSE  README.md
src/: main.rs
tests/en_US/: en_US_json.txt
tests/es/: es_json.txt  es_words.txt
