[package]
name = "define"
version = "1.0.0"
authors = ["john"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.3", features=["json"] }
tokio = { version = "1.5.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.125", features = ["derive"]}

[dev-dependencies]
rand = "0.8.3"
tokio-test = "0.4.1"
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
